Created website lol

--- a/index.html
+++ b/index.html
@@ -1,39 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Under Construction</title>
-    <style>
-        body {
-            background-image: url("https://images-ext-2.discordapp.net/external/U-VSCuj91E7NUCvJFKaKYyuVgfUTQ9PJv23pqo-SJHQ/http/www.sheepshaver.cebix.net/construction.gif");
-            animation: marquee 5s infinite linear;
-        }
-        div {
-            margin: auto;
-            background: white;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-        }
+	<meta charset="utf-8">
+	<title>octoturt</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<link rel='stylesheet' href='assets/style/amber-terminal.css' />
+	<link rel='stylesheet' media='screen and (max-width: 799px)' href='assets/style/amber-mobile.css' />
 
-        @keyframes marquee {
-            0% {
-                background-position: 0;
-            }
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+	<link rel="manifest" href="assets/icons/site.webmanifest">
+	<link rel="mask-icon" href="assets/icons/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="assets/icons/favicon.ico">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-config" content="assets/icons/browserconfig.xml">
+	<meta name="theme-color" content="#ed6c30">
 
-            100% {
-                background-position: -1190px;
-            }
-        }
-    </style>
 </head>
+
 <body>
-    <div>
-        <marquee>
-            <p>it's not done yet</p>
-        </marquee>
-    </div>
+	<div class='page-body'>
+		<blockquote>
+			<p class=name>Alexis Scobey</p>
+			<p>
+			<em>she/her</em> 🏳️‍⚧️
+			</p>
+		</blockquote>
+		<div class="parent">
+			<div class="div1">
+				<img class="icon" src="assets/images/octoturt.png" alt="An icon representation of an octoling from Splatoon, with a shell upon its head. It is known simply as: THE OCTOTURT">
+			</div>
+			<div class="div2">
+				<p>i'm alexis scobey, a trans college student from maryland</p>
+				<p>i have a general interest in computers and technology (though all things considered i am not actually that smart)</p>
+				<p>find me in some of the places where cool people on the internet are found: </p>
+				<ul>
+					<li><a href="https://www.twitter.com/octoturt">twitter</a></li>
+					<li><a href="https://www.youtube.com/channel/UCk1JFD492NFq6zdvFQYErmA">youtube</a></li>
+					<li><a href="https://github.com/octoturt">github</a></li>
+					<li><a href="https://discord.gg/DmngDRdQ4u">the octotank discord server</a></li>
+				</ul>
+				
+			</div>
+		</div> 
+
+		</br><a href="#" class="splash"></a>
+		<script src="splash.js"></script>
+	</div>
 </body>
 </html>
