--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="shortcut icon" href="assets/icons/favicon.ico">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-config" content="assets/icons/browserconfig.xml">
-	<meta name="theme-color" content="#ed6c30">
+	<meta name="theme-color" content="#190d07">
 
 </head>
 
