updated youtube link to use handle as opposed channel id. one day perhaps i will have a vanity url

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<p>find me in some of the places where cool people on the internet are found: </p>
 				<ul>
 					<li><a href="https://www.twitter.com/octoturt">twitter</a></li>
-					<li><a href="https://www.youtube.com/channel/UCk1JFD492NFq6zdvFQYErmA">youtube</a></li>
+					<li><a href="https://www.youtube.com/@octoturt">youtube</a></li>
 					<li><a href="https://github.com/octoturt">github</a></li>
 					<li><a href="https://discord.gg/DmngDRdQ4u">the octotank discord server</a></li>
 				</ul>
