minor redesign also added tumblr and mastodon links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</blockquote>
 		<div class="parent">
 			<div class="div1">
-				<img class="icon" src="assets/images/octoturt.png" alt="An icon representation of an octoling from Splatoon, with a shell upon its head. It is known simply as: THE OCTOTURT">
+				<img class="icon" src="assets/images/octoturt.svg" alt="An icon representation of an octoling from Splatoon, with a shell upon its head. It is known simply as: THE OCTOTURT">
 			</div>
 			<div class="div2">
 				<p>i'm alexis scobey, a trans college student from maryland</p>
@@ -38,11 +38,13 @@
 				<p>find me in some of the places where cool people on the internet are found: </p>
 				<ul>
 					<li><a href="https://www.twitter.com/octoturt">twitter</a></li>
+					<li><a href="https://octoturt.tumblr.com">tumblr</a></li>
+					<li><a rel="me" href="https://mastodon.social/@octoturt">mastodon</a></li>
 					<li><a href="https://www.youtube.com/@octoturt">youtube</a></li>
 					<li><a href="https://github.com/octoturt">github</a></li>
 					<li><a href="https://discord.gg/DmngDRdQ4u">the octotank discord server</a></li>
 				</ul>
-				
+				<p>at the time of writing, twitter is my most active online profile, but this is subject to change. my discord server remains the best way to contact me directly</p>
 			</div>
 		</div> 
 
