changed mastodon link to indicate move to bitbang

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<ul>
 					<li><a href="https://www.twitter.com/octoturt">twitter</a></li>
 					<li><a href="https://octoturt.tumblr.com">tumblr</a></li>
-					<li><a rel="me" href="https://mastodon.social/@octoturt">mastodon</a></li>
+					<li><a rel="me" href="https://bitbang.social/@octoturt">the fediverse</a></li>
 					<li><a href="https://www.youtube.com/@octoturt">youtube</a></li>
 					<li><a href="https://github.com/octoturt">github</a></li>
 					<li><a href="https://discord.gg/DmngDRdQ4u">the octotank discord server</a></li>
