--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div class='page-body'>
 		<blockquote>
-			<p class=name>Alexis Scobey</p>
+			<p class=name>octoturt</p>
 			<p>
 			<em>she/her</em> 🏳️‍⚧️
 			</p>
@@ -33,18 +33,16 @@
 				<img class="icon" src="assets/images/octoturt.svg" alt="An icon representation of an octoling from Splatoon, with a shell upon its head. It is known simply as: THE OCTOTURT">
 			</div>
 			<div class="div2">
-				<p>i'm alexis scobey, a trans college student from maryland</p>
+				<p>i'm alexis, a trans girl from maryland</p>
 				<p>i have a general interest in computers and technology (though all things considered i am not actually that smart)</p>
 				<p>find me in some of the places where cool people on the internet are found: </p>
 				<ul>
-					<li><a href="https://www.twitter.com/octoturt">twitter</a></li>
-					<li><a href="https://octoturt.tumblr.com">tumblr</a></li>
 					<li><a rel="me" href="https://bitbang.social/@octoturt">the fediverse</a></li>
+					<li><a href="https://octoturt.tumblr.com">tumblr</a></li>
 					<li><a href="https://www.youtube.com/@octoturt">youtube</a></li>
 					<li><a href="https://github.com/octoturt">github</a></li>
 					<li><a href="https://discord.gg/DmngDRdQ4u">the octotank discord server</a></li>
 				</ul>
-				<p>at the time of writing, twitter is my most active online profile, but this is subject to change. my discord server remains the best way to contact me directly</p>
 			</div>
 		</div> 
 
