added RSS links

--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
 				<p>i have a general interest in computers and technology (though all things considered i am not actually that smart)</p>
 				<p>find me in some of the places where cool people on the internet are found: </p>
 				<ul>
-					<li><a rel="me" href="https://bitbang.social/@octoturt">the fediverse</a></li>
-					<li><a href="https://octoturt.tumblr.com">tumblr</a></li>
+					<li>
+						<a rel="me" href="https://bitbang.social/@octoturt">the fediverse</a>
+						<a href="feed://https://bitbang.social/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
+					</li>
+					<li>
+						<a href="https://octoturt.tumblr.com">tumblr</a>
+						<a href="feed://https://octoturt.tumblr.com/rss"> <span class="feed">&#xe800;</span></a>
+					</li>
 					<li><a href="https://www.youtube.com/@octoturt">youtube</a></li>
 					<li><a href="https://github.com/octoturt">github</a></li>
 					<li><a href="https://discord.gg/DmngDRdQ4u">the octotank discord server</a></li>
