added twitter back
mental health got too good, need to go back

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 						<a href="https://octoturt.tumblr.com">tumblr</a>
 						<a href="feed://https://octoturt.tumblr.com/rss"> <span class="feed">&#xe800;</span></a>
 					</li>
+					<li><a href="https://www.twitter.com/octoturt">twitter</a></li>
 					<li><a href="https://www.youtube.com/@octoturt">youtube</a></li>
 					<li><a href="https://github.com/octoturt">github</a></li>
 					<li><a href="https://discord.gg/DmngDRdQ4u">the octotank discord server</a></li>
