updated fedi links

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 				<p>find me in some of the places where cool people on the internet are found: </p>
 				<ul>
 					<li>
-						<a rel="me" href="https://nattois.life/@octoturt">the fediverse</a>
-						<a href="feed://https://bitbang.social/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
+						<a rel="me" href="https://tech.lgbt/@octoturt">the fediverse</a>
+						<a  href="feed://https://tech.lgbt/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
 					</li>
 					<li>
 						<a href="https://octoturt.tumblr.com">tumblr</a>
