added my stuff page

--- a/mystuff.html
+++ b/mystuff.html
@@ -23,34 +23,21 @@
 <body>
 	<div class='page-body'>
 		<blockquote>
-			<p class=name>octoturt</p>
+			<p class=name>my stuff</p>
 			<p>
-			<em>she/her</em> 🏳️‍⚧️
+			<em><a href="./">&#60; return home</a></em>
 			</p>
 		</blockquote>
 		<div class="parent">
-			<div class="div1">
-				<img class="icon" src="assets/images/octoturt.svg" alt="An icon representation of an octoling from Splatoon, with a shell upon its head. It is known simply as: THE OCTOTURT">
+			<div class=div3>
+				<p>i haven't been doing much in the way of personal creative projects recently, but i have in the past been interested in programming, graphic design, video production, and other miscellaneous creative endeavours</p>
+				<p>if i do make anything, it would likely go to one of the places listed here, so please feel free to give me a follow/subscription/whatever if you're interested
 			</div>
 			<div class="div2">
-				<p>i'm alexis, a trans girl from maryland</p>
-				<p>i have a general interest in computers and technology, particuarly in regards to the design aspects of technology</p> 
-				<p>find me in some of the places where cool people on the internet are found: </p>
 				<ul>
-					<li>
-						
-						<a class="extlink" rel="me" href="https://tech.lgbt/@octoturt">the fediverse</a>
-						<a href="feed://https://tech.lgbt/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
-					</li>
-					<li>
-						<a class="extlink" href="https://octoturt.tumblr.com">tumblr</a>
-						<a href="feed://https://octoturt.tumblr.com/rss"> <span class="feed">&#xe800;</span></a>
-					</li>
-					<li><a class="extlink" href="https://bsky.app/profile/octoturt.net">bluesky</a></li>
-					<li><a class="extlink" href="https://www.twitter.com/octoturt">twitter</a></li>
-					<li><a class="extlink" href="https://discord.gg/DmngDRdQ4u">discord</a></li>
+					<li><a href="https://www.youtube.com/@octoturt">youtube</a></li>
+					<li><a href="https://github.com/octoturt">github</a></li>
 				</ul>
-				<p>to find any projects i've been working on, you can check out <a href="./mystuff.html">this page</a>.</p>
 			</div>
 		</div>
 		</br><a href="#" target="_blank" class="splash"></a>
