added link and qr code for signal messenger

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 				<p>find me in some of the places where cool people on the internet are found: </p>
 				<ul>
 					<li>
+						<a class="extlink" href="https://signal.me/#eu/kGZWLZOrGSKF1mRA/KCW8XujR/ukrb69NkoxtBwqp9pznb18PV1KaoJKZHm3Cwhk">signal</a>
+						<a href="assets/images/signal-username-qr-code.png"> <span class="feed">&#xf143;</span></a>
+					</li>
+					<li>
 						
 						<a class="extlink" rel="me" href="https://tech.lgbt/@octoturt">the fediverse</a>
 						<a href="feed://https://tech.lgbt/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
