--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<ul>
 					<li>
 						<a class="extlink" href="https://signal.me/#eu/kGZWLZOrGSKF1mRA/KCW8XujR/ukrb69NkoxtBwqp9pznb18PV1KaoJKZHm3Cwhk">signal</a>
-						<a href="assets/images/signal-username-qr-code.png"> <span class="feed">&#xf143;</span></a>
+						<a href="./signal.html"> <span class="feed">&#xf143;</span></a>
 					</li>
 					<li>
 						
