Updated Fediverse Link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</li>
 					<li>
 						
-						<a class="extlink" rel="me" href="https://tech.lgbt/@octoturt">the fediverse</a>
+						<a class="extlink" rel="me" href="https://mastodon.social/@octoturt">the fediverse</a>
 						<a href="feed://https://tech.lgbt/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
 					</li>
 					<li>
