Updated Fediverse Feed

--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 					<li>
 						
 						<a class="extlink" rel="me" href="https://mastodon.social/@octoturt">the fediverse</a>
-						<a href="feed://https://tech.lgbt/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
+						<a href="feed://https://mastodon.social/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
 					</li>
 					<li>
 						<a class="extlink" href="https://octoturt.tumblr.com">tumblr</a>
 						<a href="feed://https://octoturt.tumblr.com/rss"> <span class="feed">&#xe800;</span></a>
 					</li>
-					<li><a class="extlink" href="https://bsky.app/profile/octoturt.net">bluesky</a></li>
 					<li><a class="extlink" href="https://www.twitter.com/octoturt">twitter</a></li>
 					<li><a class="extlink" href="https://discord.gg/DmngDRdQ4u">discord</a></li>
 				</ul>
