replace twitter with bluesky
replaced link to twitter with a link to the bluesky account bridged from my mastodon via bridgyfed

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<a class="extlink" href="https://octoturt.tumblr.com">tumblr</a>
 						<a href="feed://https://octoturt.tumblr.com/rss"> <span class="feed">&#xe800;</span></a>
 					</li>
-					<li><a class="extlink" href="https://www.twitter.com/octoturt">twitter</a></li>
+					<li><a class="extlink" href="https://bsky.app/profile/did:plc:2ivz4fba7r3puepil2n5h4xd">bluesky</a></li>
 					<li><a class="extlink" href="https://discord.gg/DmngDRdQ4u">discord</a></li>
 				</ul>
 				<p>to find any projects i've been working on, you can check out <a href="./mystuff.html">this page</a>.</p>
