--- a/index.html
+++ b/index.html
@@ -41,16 +41,20 @@
 						<a class="extlink" href="https://signal.me/#eu/kGZWLZOrGSKF1mRA/KCW8XujR/ukrb69NkoxtBwqp9pznb18PV1KaoJKZHm3Cwhk">signal</a>
 						<a href="./signal.html"> <span class="feed">&#xf143;</span></a>
 					</li>
-					<li>
+<!--					<li>
 						
 						<a class="extlink" rel="me" href="https://mastodon.social/@octoturt">the fediverse</a>
 						<a href="feed://https://mastodon.social/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
+					</li>
+--!>
+					<li>
+						<a class="extlink" href="https://bsky.app/profile/did:plc:nrvacq36gpmialn3kfarlyi3">bluesky</a>
+						<a href="feed://https://bsky.app/profile/did:plc:nrvacq36gpmialn3kfarlyi3/rss"> <span class="feed">&#xe800;</span></a>
 					</li>
 					<li>
 						<a class="extlink" href="https://octoturt.tumblr.com">tumblr</a>
 						<a href="feed://https://octoturt.tumblr.com/rss"> <span class="feed">&#xe800;</span></a>
 					</li>
-					<li><a class="extlink" href="https://bsky.app/profile/did:plc:2ivz4fba7r3puepil2n5h4xd">bluesky</a></li>
 					<li><a class="extlink" href="https://discord.gg/DmngDRdQ4u">discord</a></li>
 				</ul>
 				<p>to find any projects i've been working on, you can check out <a href="./mystuff.html">this page</a>.</p>
