--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 <!--					<li>
 						
 						<a class="extlink" rel="me" href="https://mastodon.social/@octoturt">the fediverse</a>
-						<a href="feed://https://mastodon.social/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
+						<a href="https://mastodon.social/users/octoturt.rss"> <span class="feed">&#xe800;</span></a>
 					</li>
 --!>
 					<li>
 						<a class="extlink" href="https://bsky.app/profile/did:plc:nrvacq36gpmialn3kfarlyi3">bluesky</a>
-						<a href="feed://https://bsky.app/profile/did:plc:nrvacq36gpmialn3kfarlyi3/rss"> <span class="feed">&#xe800;</span></a>
+						<a href="https://bsky.app/profile/did:plc:nrvacq36gpmialn3kfarlyi3/rss"> <span class="feed">&#xe800;</span></a>
 					</li>
 					<li>
 						<a class="extlink" href="https://octoturt.tumblr.com">tumblr</a>
-						<a href="feed://https://octoturt.tumblr.com/rss"> <span class="feed">&#xe800;</span></a>
+						<a href="https://octoturt.tumblr.com/rss"> <span class="feed">&#xe800;</span></a>
 					</li>
 					<li><a class="extlink" href="https://discord.gg/DmngDRdQ4u">discord</a></li>
 				</ul>
