--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</li>
 					<li><a class="extlink" href="https://discord.gg/DmngDRdQ4u">discord</a></li>
 				</ul>
-				<p>to find any projects i've been working on, you can check out <a href="./mystuff.html">this page</a>.</p>
+				<p>hiring? check out my <a href="https://www.linkedin.com/in/alexis-scobey-6a46a1220/">linkedin</a>.</p>
 			</div>
 		</div>
 		</br><a href="#" target="_blank" class="splash"></a>
